2007-04-12  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileSystem.m
	(-restartProcessWithDomain:error:):
	(-stopProcessWithDomain:error:):
	(-suspendProcessWithDomain:error:):
	(-loadConfigList):
	(-saveConfigList):
	(-maskedProcesses):
	More reindenting and documentation work.

2007-04-11  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileSystem.m
	(-replyToLogOutOrPowerOff:):
	(-logOutAndPowerOff:):
	(-terminateAllProcessesOnOperation:):
	(-startProcessWithUserFeedbackForDomain:):
	More reindenting and documentation work.

2007-04-11  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileSystem.m
	(-findConfigFileAndStartUpdateMonitoring):
	(-checkConfigFileUpdate):
	(-processTerminated:)
	More reindenting and documentation work. Fixed -checkConfigFileUpdate not
	be run when some tasks are on the way to be launch.

2007-04-09  Quentin Mathe <qmathe@club-internet.fr>

	* ApplicationManager.h: Minor adjustments.
	* EtoileSystem.h: New ivar _launchQueueScheduled.
	* EtoileSystem.m (-synchronizeProcessesWithConfigFile): Modified indenting
	to match Etoile guidelines and reformatted the code to look better. Also
	reintroduced live processes synchronization with the config file thanks
	to flag _launchQueueScheduled.

2007-04-07  Quentin Mathe <qmathe@club-internet.fr>

	* ApplicationManager.m: Made the code more solid by initializing all vars 
	and by logging warnings for all incorrect returned values (not in their 
	boundaries). Lot of work on public and private documentation. Finished to
	update indenting for -terminateAllApplicationsOnOperation: especially.
	Few cleanings of the code (like variable name or order of substatements).

2007-04-07  Quentin Mathe <qmathe@club-internet.fr>

	* ApplicationManager.m: Almost fully updated the indenting to be compliant 
	with Etoile coding guidelines. Improved documentation.

2007-04-07  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileSystem.m: Minor logging improvement.

2007-03-22  Quentin Mathe <qmathe@club-internet.fr>
